--- a/Index.html
+++ b/Index.html
@@ -33,17 +33,18 @@
 
     <div id="shelfDiv">
       <div class="shelfOuter">
+        <img src="images/Set For Life 2.jpg" alt="sample book cover" height="240" width="140" />
         <div class="shelfInner"></div>
       </div>
-      <div class="shelfOuter">
+      <div class="shelfOuter" id="shelfOuter2">
         <div class="shelfInner"></div>
       </div>
-      <div class="shelfOuter">
+      <div class="shelfOuter" id="shelfOuter3">
         <div class="shelfInner"></div>
       </div>
     </div>
 
-    <i class="fas fa-pen-fancy"></i>
+
 </body>
 
 </html>
