--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 
     <div id="shelfDiv">
       <div class="shelfOuter">
+        <img src="images/Set For Life 2.jpg" alt="sample book cover" height="240" width="140" />
         <div class="shelfInner"></div>
       </div>
       <div class="shelfOuter" id="shelfOuter2">
@@ -43,7 +44,9 @@
       </div>
     </div>
 
-    <i class="fas fa-pen-fancy"></i>
+    <footer>
+      <a href="">next</a>
+    </footer>
 </body>
 
 </html>
