--- a/index.html
+++ b/index.html
@@ -42,11 +42,17 @@
       <div class="shelfOuter" id="shelfOuter3">
         <div class="shelfInner"></div>
       </div>
+      <nav id="shelfNav">
+        <a href="">next</a>
+        <a href="">previous</a>
+        <a href="">first</a>
+        <a href="">last</a>
+      </nav>
     </div>
 
-    <footer>
-      <a href="">next</a>
-    </footer>
+
+
+
 </body>
 
 </html>
