--- a/register.html
+++ b/register.html
@@ -14,7 +14,7 @@
 
 <body>
   <header>
-    <h1>Library</h1>
+    <h1>Register</h1>
     <button id="homeButton">Home</button>
     <button id="libraryButton">Library</button>
     <button id="accountButton">Account</button>
@@ -23,6 +23,7 @@
       <input type="submit" value="Search" id="searchButton" />
     </form>
   </header>
+  <main>
     <form id="register" action="register.php" method="post" >
       <div>
         <label for="email">Email:</label>
@@ -34,12 +35,10 @@
       </div>
 
       <div>
-        <label for="password2">Re-Type Password:</label>
+        <label for="password2">Re-type Password:</label>
         <input type="password" name="password2" id="password2" placeholder="************" required />
       </div>
-      <div>
         <button>Register</button>
-        </div>
     </form>
   </main>
 
