Added new pages, updated some button types, etc.

--- a/passwordreset.html
+++ b/passwordreset.html
@@ -41,7 +41,7 @@
         <label for="password2">Re-type Password:</label>
         <input type="password" name="password2" id="password2" placeholder="************" required />
       </div>
-        <button id="forgotpassword">Change Password</button>
+        <button type="submit" name="forgotpassword">Change Password</button>
     </form>
   </main>
 
