--- a/account.html
+++ b/account.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Register</title>
+  <title>Login</title>
   <link href="css/reset.css" rel="stylesheet" type="text/css" />
   <!--reset.css file taken from assignment 1 -->
   <link href="css/style.css" rel="stylesheet" type="text/css" />
@@ -14,7 +14,7 @@
 
 <body>
   <header>
-    <h1>Register</h1>
+    <h1>Login</h1>
     <button id="homeButton">Home</button>
     <button id="libraryButton">Library</button>
     <button id="accountButton">Account</button>
@@ -24,21 +24,17 @@
     </form>
   </header>
   <main>
-    <form id="register" action="register.php" method="post" >
+    <form id="updateAccount" action="updateAccount.php" method="post" >
       <div>
         <label for="email">Email:</label>
-        <input type="email" name="email" id="email" placeholder="john@smith.com" />
+        <input type="email" name="email" id="email" placeholder="johnsmith@yahoo.ca" />
       </div>
       <div>
         <label for="password">Password:</label>
-        <input type="password" name="password" id="password" placeholder="************" required />
+        <input type="password" name="password" id="password" placeholder="*************" required />
       </div>
-
-      <div>
-        <label for="password2">Re-type Password:</label>
-        <input type="password" name="password2" id="password2" placeholder="************" required />
-      </div>
-        <button type="submit" name="register">Register</button>
+        <button type="submit" name="changeinfo">Update</button>
+        <button type="submit" name="logout">Logout</button>
     </form>
   </main>
 
