Found error in closing tag, added home.html doc

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     </select>
     <p>Sort By: </p>
 
+    <!-- missing closing div -->
     <div id="shelfDiv">
       <div class="shelfOuter">
         <img src="images/Set For Life 2.jpg" alt="sample book cover" height="240" width="140" />
@@ -49,7 +50,6 @@
         <a href="">last</a>
       </nav>
     </div>
-
 
 
 
