--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <option value="lastModified">Last Modified</option>
     </select>
     <p>Sort By: </p>
-
+</div>
     <!-- missing closing div -->
     <div id="shelfDiv">
       <div class="shelfOuter">
