--- a/index.html
+++ b/index.html
@@ -13,12 +13,11 @@
 </head>
 
 <body>
-  <header>
+  <header class="fullHeader">
     <h1>Library</h1>
 
-    <!--  <button id="homeButton">Home</button> -->
     <a href="home.html" id="homeButton">Home</a>
-    <a href="" id="libraryButton">Library</a>
+    <a href="index.html" id="libraryButton">Library</a>
     <a href="account.html" id="accountButton">Account</a>
 
     <form id="searchForm">
