Added header to deleteBook

--- a/deleteBook.html
+++ b/deleteBook.html
@@ -13,6 +13,18 @@
 </head>
 
 <body>
+  <header class="fullHeader">
+    <h1>Delete Book</h1>
+
+    <a href="home.html" id="homeButton">Home</a>
+    <a href="index.html" id="libraryButton">Library</a>
+    <a href="account.html" id="accountButton">Account</a>
+
+    <form id="searchForm">
+      <input type="text" name="searchField" value="search" id="searchField" />
+      <input type="submit" value="Search" id="searchButton" />
+    </form>
+  </header>
   <div class="displayBox">
     <img src="images/SetForLife2.jpg" alt="sample book cover" height="640" width="400" />
     <a href="">Cancel</a>
