had to rollback and fix a couple issues with home and others, plus added a links instead of buttons at top.

--- a/home.html
+++ b/home.html
@@ -12,12 +12,13 @@
   </head>
 
   <body>
-    <header>
-      <button id="homeButton">Home</button>
-      <h1>BCW Books</h1>
-      <button id="libraryButton">Library</button>
-      <button id="accountButton">Account</button>
-      <button id="loginButton">Login</button>
+    <header class="fullHeader">
+      <h1>Library</h1>
+
+      <a href="home.html" id="homeButton">Home</a>
+      <a href="index.html" id="libraryButton">Library</a>
+      <a href="register.html" id="accountButton">Register</a>
+      <a href="login.html" id="loginButton">Login</a>
     </header>
 <div id="content">
     <main>
