--- a/register.html
+++ b/register.html
@@ -13,16 +13,14 @@
 </head>
 
 <body>
-  <header>
-    <h1>Register</h1>
-    <button id="homeButton">Home</button>
-    <button id="libraryButton">Library</button>
-    <button id="accountButton">Account</button>
-    <form>
-      <input type="text" name="searchField" value="search" id="searchField" />
-      <input type="submit" value="Search" id="searchButton" />
-    </form>
-  </header>
+    <header class="fullHeader">
+      <h1>Register</h1>
+
+      <a href="home.html" id="homeButton">Home</a>
+      <a href="index.html" id="libraryButton">Library</a>
+      <a href="register.html" id="accountButton">Register</a>
+      <a href="login.html" id="loginButton">Login</a>
+    </header>
   <main>
     <form id="register" action="register.php" method="post" >
       <div>
