--- a/index.html
+++ b/index.html
@@ -1,65 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <title>Main Page</title>
+    <link href="css/reset.css" rel="stylesheet" type="text/css" />
+    <!-- reset.css file taken from assignment 1 -->
+    <link href="css/style.css" rel="stylesheet" type="text/css" />
+    <!-- Script for using icons from FontAwesome.com -->
+    <script src="https://kit.fontawesome.com/c155ad6c68.js"></script>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  </head>
 
-<head>
-  <title>Main Page</title>
-  <link href="css/reset.css" rel="stylesheet" type="text/css" />
-  <!--reset.css file taken from assignment 1 -->
-  <link href="css/style.css" rel="stylesheet" type="text/css" />
-  <!--Script for using icons from FontAwesome.com -->
-  <script src="https://kit.fontawesome.com/c155ad6c68.js"></script>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-</head>
+  <body>
+    <header class="fullHeader">
+      <h1>Library</h1>
 
-<body>
-  <header class="fullHeader">
-    <h1>Library</h1>
+      <a href="home.html" id="homeButton">Home</a>
+      <a href="index.html" id="libraryButton">Library</a>
+      <a href="account.html" id="accountButton">Account</a>
 
-    <a href="home.html" id="homeButton">Home</a>
-    <a href="index.html" id="libraryButton">Library</a>
-    <a href="account.html" id="accountButton">Account</a>
+      <form id="searchForm">
+        <input type="text" name="searchField" value="search" id="searchField" />
+        <input type="submit" value="Search" id="searchButton" />
+      </form>
+    </header>
+    <div id="bodyDiv">
+      <select name="sort" id="sortList">
+        <option value="name">Name (default)</option>
+        <option value="dateAdded">Date Added</option>
+        <option value="lastModified">Last Modified</option>
+      </select>
+      <p>Sort By:</p>
 
-    <form id="searchForm">
-      <input type="text" name="searchField" value="search" id="searchField" />
-      <input type="submit" value="Search" id="searchButton" />
-    </form>
-  </header>
-  <div id="bodyDiv">
-    <select name="sort" id="sortList">
-      <option value="name">Name (default)</option>
-      <option value="dateAdded">Date Added</option>
-      <option value="lastModified">Last Modified</option>
-    </select>
-    <p>Sort By: </p>
-
-    <div id="shelfDiv">
-      <div class="shelfOuter">
-        <a href="">
-          <img src="images/SetForLife2.jpg" alt="sample book cover" height="240" width="140" />
-        </a>
-        <div class="shelfInner"></div>
+      <div id="shelfDiv">
+        <div class="shelfOuter">
+          <a href="">
+            <img
+              src="images/SetForLife2.jpg"
+              alt="sample book cover"
+              height="240"
+              width="140"
+            />
+          </a>
+          <div class="shelfInner"></div>
+        </div>
+        <div class="shelfOuter" id="shelfOuter2">
+          <div class="shelfInner"></div>
+        </div>
+        <div class="shelfOuter" id="shelfOuter3">
+          <div class="shelfInner"></div>
+        </div>
+        <nav id="shelfNav">
+          <!-- Add icon sourced from https://icons8.com/icons/set/plus -->
+          <a href="addBook.html" id="addBook"
+            ><img
+              src="images/plus-icon.png"
+              alt="Add book icon"
+              height="30"
+              width="30"
+          /></a>
+          <a href="">first</a> <a href="">next</a> <a href="">previous</a>
+          <a href="">last</a>
+        </nav>
       </div>
-      <div class="shelfOuter" id="shelfOuter2">
-        <div class="shelfInner"></div>
-      </div>
-      <div class="shelfOuter" id="shelfOuter3">
-        <div class="shelfInner"></div>
-      </div>
-      <nav id="shelfNav">
-        <!-- Add icon sourced from https://icons8.com/icons/set/plus -->
-        <a href="addBook.html" id="addBook"><img src="images/plus-icon.png" alt="Add book icon" height="30" width="30"></a>
-        <a href="">first</a>
-        <a href="">next</a>
-        <a href="">previous</a>
-        <a href="">last</a>
-
-      </nav>
     </div>
-  </div>
-
-
-
-</body>
-
+  </body>
 </html>
