--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
       <div id="shelfDiv">
         <div class="shelfOuter">
-          <a href="">
+          <a href="viewInfo.html">
             <img
               src="images/SetForLife2.jpg"
               alt="sample book cover"
