Added comments to some pages

--- a/addBook.html
+++ b/addBook.html
@@ -1,3 +1,18 @@
+<!--
+  Page Name: addBook.html
+  Programmer Name: Alan-Michael Bradshaw and Evan Campbell-Weiner
+  Language: HTML5
+  Page Description:
+  Allows the user to upload the details for a book including a cover and copies of the books
+  in relative formats.
+
+
+  Includes:
+  reset.css: the default css file taken from  http://meyerweb.com/eric/tools/css/reset/
+  style.css: overarcing css file
+
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -21,7 +36,7 @@
     <a href="account.html" id="accountButton">Account</a>
 
     <form id="searchForm">
-      <input type="text" name="searchField" value="search" id="searchField" />
+      <input type="text" name="searchField" value="Search" id="searchField" />
       <input type="submit" value="Search" id="searchButton" />
     </form>
   </header>
