--- a/home.html
+++ b/home.html
@@ -1,3 +1,18 @@
+<!--
+  Page Name: home.html
+  Programmer Name: Alan-Michael Bradshaw and Evan Campbell-Weiner
+  Language: HTML5
+  Page Description:
+  The home page for the website.
+  It has links to itself, the library page, the register and login page.
+  
+
+
+  Includes:
+  reset.css: the default css file taken from  http://meyerweb.com/eric/tools/css/reset/
+  style.css: overarcing css file
+
+-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
