--- a/deleteBook.html
+++ b/deleteBook.html
@@ -1,3 +1,17 @@
+<!--
+  Page Name: deleteBook.html
+  Programmer Name: Alan-Michael Bradshaw and Evan Campbell-Weiner
+  Language: HTML5
+  Page Description:
+  deleteBook deletes a particular book.
+
+
+
+  Includes:
+  reset.css: the default css file taken from  http://meyerweb.com/eric/tools/css/reset/
+  style.css: overarcing css file
+
+-->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -21,7 +35,7 @@
     <a href="account.html" id="accountButton">Account</a>
 
     <form id="searchForm">
-      <input type="text" name="searchField" value="search" id="searchField" />
+      <input type="text" name="searchField" value="Search" id="searchField" />
       <input type="submit" value="Search" id="searchButton" />
     </form>
   </header>
