--- a/index.html
+++ b/index.html
@@ -1,3 +1,19 @@
+<!--
+  Page Name: index.html
+  Programmer Name: Alan-Michael Bradshaw and Evan Campbell-Weiner
+  Language: HTML5
+  Page Description:
+  This is the library page that will be referenced when a user is logged in.
+  It displays the cover of each book, links to edit, deltee, and view details of book.
+  It limits the number of books to a page, and provides links to next page.
+  There are quick sorts and search possibilities.
+
+  Includes:
+  reset.css: the default css file taken from  http://meyerweb.com/eric/tools/css/reset/
+  style.css: overarcing css file
+
+-->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -20,7 +36,7 @@
       <a href="account.html" id="accountButton">Account</a>
 
       <form id="searchForm">
-        <input type="text" name="searchField" value="search" id="searchField" />
+        <input type="text" name="searchField" value="Search" id="searchField" />
         <input type="submit" value="Search" id="searchButton" />
       </form>
     </header>
