Adde more comments

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!--
   Page Name: index.html
   Programmer Name: Alan-Michael Bradshaw and Evan Campbell-Weiner
-  Language: HTML5
+  Language: HTML5 and PHP
   Page Description:
   This is the library page that will be referenced when a user is logged in.
   It displays the cover of each book, links to edit, deltee, and view details of book.
