--- a/login.html
+++ b/login.html
@@ -1,3 +1,18 @@
+<!--
+  Page Name: login.html
+  Programmer Name: Alan-Michael Bradshaw and Evan Campbell-Weiner
+  Language: HTML5 and PHP
+  Page Description:
+  A login page that allows a user to enter their username and Password
+  as well as a remember me link.
+
+
+
+  Includes:
+  reset.css: the default css file taken from  http://meyerweb.com/eric/tools/css/reset/
+  style.css: overarcing css file
+
+-->
 <!DOCTYPE html>
 <html lang="en">
 
