--- a/register.html
+++ b/register.html
@@ -1,3 +1,17 @@
+<!--
+  Page Name: register.html
+  Programmer Name: Alan-Michael Bradshaw and Evan Campbell-Weiner
+  Language: HTML5 and PHP
+  Page Description:
+  
+
+
+
+  Includes:
+  reset.css: the default css file taken from  http://meyerweb.com/eric/tools/css/reset/
+  style.css: overarcing css file
+
+-->
 <!DOCTYPE html>
 <html lang="en">
 
