--- a/addBook.html
+++ b/addBook.html
@@ -1,7 +1,7 @@
 <!--
   Page Name: addBook.html
   Programmer Name: Alan-Michael Bradshaw and Evan Campbell-Weiner
-  Language: HTML5
+  Language: HTML5 and PHP
   Page Description:
   Allows the user to upload the details for a book including a cover and copies of the books
   in relative formats.
