--- a/deleteBook.html
+++ b/deleteBook.html
@@ -1,7 +1,7 @@
 <!--
   Page Name: deleteBook.html
   Programmer Name: Alan-Michael Bradshaw and Evan Campbell-Weiner
-  Language: HTML5
+  Language: HTML5 and PHP
   Page Description:
   deleteBook deletes a particular book.
 
