--- a/home.html
+++ b/home.html
@@ -1,11 +1,11 @@
 <!--
   Page Name: home.html
   Programmer Name: Alan-Michael Bradshaw and Evan Campbell-Weiner
-  Language: HTML5
+  Language: HTML5 and PHP 
   Page Description:
   The home page for the website.
   It has links to itself, the library page, the register and login page.
-  
+
 
 
   Includes:
