--- a/viewInfo.html
+++ b/viewInfo.html
@@ -1,7 +1,7 @@
 <!--
   Page Name: viewinfo.html
   Programmer Name: Alan-Michael Bradshaw and Evan Campbell-Weiner
-  Language: HTML5
+  Language: HTML5 and PHP
   Page Description:
   ****************
 
